[package]
name = "jh7110-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = "0.12.0"
vcell = "0.1.3"

[dependencies.critical-section]
version = "1.1.3"
optional = true

[dependencies.riscv-rt]
version = "0.13.0"
optional = true

[features]
default = ["critical-section"]
critical-section = ["dep:critical-section"]
rt = ["riscv-rt"]
rts = ["rt", "riscv-rt/s-mode"]
all = ["critical-section", "rts"]
